[FIX] no height for non-visible Hint (#2793)
* no height for hint

* and tooltip

--- a/apps/modernization-ui/src/design-system/hint/hint.module.scss
+++ b/apps/modernization-ui/src/design-system/hint/hint.module.scss
@@ -9,6 +9,8 @@
 
     visibility: hidden;
     pointer-events: none;
+    height: 0;
+    overflow: hidden;
 
     &.left {
         right: 100%;
@@ -22,5 +24,7 @@
         z-index: 10000;
         visibility: visible;
         pointer-events: all;
+        height: fit-content;
+        overflow: unset;
     }
 }
